Revision history Bot::BasicBot

{{$NEXT}}
  - Maintainership moved from cpan:TOMI to cpan:HINRIK
  - Use POE::Component::IRC's Connector plugin to handle reconnects
  - Kill forks on shutdown
  - Migrate distribution to Dist::Zilla
  - Eliminate bogus "NAMES HASH(0x1234567)" queries the bot was making

0.81 2009/01/26
  - Implement remove_from_all_channels, you idiot. Sigh.

0.80 2009/01/22
  - Understand quit messages - https://rt.cpan.org/Ticket/Display.html?id=42625
  - Fix the ->name method on the bot to actually return something sensible - https://rt.cpan.org/Ticket/Display.html?id=27427
  - Try to avoid zombie children on forking - https://rt.cpan.org/Public/Bug/Display.html?id=38010

0.70 2006/06/11
  - Updates for new PoDo::IRC
  - No longer do 2 server connects on startup
  - the connect test doesn't break itself by faking a connection first

0.65 2005/08/11
  - Added raw_nick support and a tiny amount of documentation
  - Support for SSL, contributed by Bradley M. Kuhn <bkuhn@softwarefreedom.org>

0.61 2005/05/13
  - Fix for the odd behaviour of freenode - we ask the server for the time
    periodically to catch servers that don't send pings.

0.60 2005/03/21
  - Charset support
  - use Text::Wrap to split up really long responses, instead of a
    nasty regexp, so we split on spaces properly.

0.50 2004/12/01 (revision 1366)
  - Real (almost) tests
  - Nick (and op/voice status) tracking
  - Quiet some warnings

0.31 2004/03/16 (revision 643)
  - Fixed 'addressing' typo, thanks Earle
  - Fixed annoying errors for logging
  - Fixed stupid bug where the return value of said wasn't getting said.
    How can I not have noticed?
  - if you don't return true from init, be more helpful.
  - if help doesn't return true, don't say anything
  - Made SYNOPSIS clearer

0.30 2003/01/02
  - Randomized name so you can run more than one at once in one POE session
  - Log a lot less.
  - Be more aggressive about reconnecting to the server